Name: EVE
Version: 1.0.0
Build-Type: Simple
Cabal-Version: >= 1.6
License: BSD3
License-File: LICENSE
Author: Adam Wick <awick@uhsure.com>
Maintainer: Adam Wick <awick@uhsure.com>
Homepage: http://github.com/acw/eve
Category: Control
Synopsis: A library for access to the databases and online API of the game EVE Online.

Description:
  At least a couple Haskell folk play EVE, and the ability to programmatically
  pull bits and pieces out of the game database and API seemed like a very
  useful thing. Patches and extensions very welcome.

Library
  Build-Depends: base >= 4.0 && < 5.0,
                 time-units >= 1.0 && < 1.2,
                 rate-limit >= 1.1 && < 1.2,
                 bytestring-progress >= 1.0 && < 1.2,
                 bzlib >= 0.5 && < 0.6,
                 HTTP >= 4000.1 && < 4000.2,
                 xml >= 1.3.7 && < 1.4
  Exposed-Modules: 
  Extensions: DeriveDataTypeable, RankNTypes

source-repository head
  type: git
  location: http://github.com/acw/eve

