Name: EVE
Version: 2.0.0
Build-Type: Simple
Cabal-Version: >= 1.6
License: BSD3
License-File: LICENSE
Author: Adam Wick <awick@uhsure.com>
Maintainer: Adam Wick <awick@uhsure.com>
Homepage: http://github.com/acw/eve
Category: Control
Synopsis: A library for access to the databases and online API of the game EVE Online.
data-dir: static
data-files: *.yaml, universeDataDx.db

Description:
  At least a couple Haskell folk play EVE, and the ability to programmatically
  pull bits and pieces out of the game database and API seemed like a very
  useful thing. Patches and extensions very welcome.

Library
  hs-source-dirs:   src
  ghc-options:      -Wall
  Build-Depends:
                    base                 >= 4.8      && < 5.0,
                    bytestring           >= 0.10.6   && < 0.12,
                    containers           >= 0.5.6    && < 0.7,
                    lens                 >= 4.13     && < 4.15,
                    network-uri          >= 2.6.0.3  && < 2.8,
                    scalpel              >= 0.3      && < 0.5,
                    scientific           >= 0.3.4    && < 0.5,
                    sqlite               >= 0.5.2    && < 0.7,
                    text                 >= 1.2.2    && < 1.4,
                    time                 >= 1.5      && < 1.8,
                    unordered-containers >= 0.2.6    && < 0.4,
                    vector               >= 0.11     && < 1.13,
                    wreq                 >= 0.4.1    && < 0.6,
                    xml                  >= 1.3.14   && < 1.5,
                    yaml                 >= 0.8.16   && < 0.10
  Exposed-Modules:
                    Finder,
                    Control.Lens.Criteria,
                    EVE.API.XML.Map,
                    EVE.Constellation,
                    EVE.Corporation,
                    EVE.Faction,
                    EVE.Graphics,
                    EVE.Race,
                    EVE.Region,
                    EVE.Static.Database,
                    EVE.Static.Database.BlueprintInfo,
                    EVE.Static.Database.Class,
                    EVE.Static.Database.Constellation,
                    EVE.Static.Database.Faction,
                    EVE.Static.Database.Icon,
                    EVE.Static.Database.Jumps,
                    EVE.Static.Database.Race,
                    EVE.Static.Database.Region,
                    EVE.Static.Database.SolarSystem,
                    EVE.Static.Database.SystemInfo,
                    EVE.Static.Database.TypeIds,
                    EVE.System
  Other-Modules:
                    EVE.API.XML.Helpers,
                    EVE.Static.Database.Helpers,
                    Paths_EVE
  other-extensions:
                    ExistentialQuantification,
                    FunctionalDependencies,
                    GeneralizedNewtypeDeriving,
                    MultiParamTypeClasses,
                    OverloadedStrings,
                    PatternGuards,
                    RankNTypes,
                    RecordWildCards,
                    TemplateHaskell,
                    TupleSections

source-repository head
  type: git
  location: http://github.com/acw/eve

